# bachelors-project

./: .gitignore  CMakeLists.txt  README.md  package.xml
cfg/: Parameters.cfg
config/: my_sensors_kinect.yaml  paddings.yaml
include/: base_visualizer.h  bounding_box.h  cloud_segmentator.h  containers.h  data_handler.h  data_visualizer.h  definitions.h  detection_utils.h  detection_visualizer.h  ellipse_operations.h  grasp_filter.h  grasp_filter_utils.h  grasp_point_detector.h  grasp_ranker.h  grasp_sampler.h  segmentation_visualizer.h  utils.h  viewer_spawner.h  visualization_thread.h
launch/: bachelors_project.launch  moveit_and_rviz.launch  my_default_controllers.launch  my_move_group.launch  my_planning_context.launch  my_pr2.launch  my_pr2_bringup.launch  my_pr2_default_controllers.launch  my_pr2_no_controllers.launch  my_rviz.launch  my_trayectory_execution.launch.xml  simulated_openni.launch
rviz/: pr2_table.rviz
scripts/: change_model_position.py  print_joints.sh  timed_roslaunch.sh
src/: base_visualizer.cpp  bounding_box.cpp  cloud_segmentator.cpp  cluster_extraction.cpp  convex_hull2d.cpp  data_handler.cpp  data_visualizer.cpp  detection_utils.cpp  detection_visualizer.cpp  ellipse_operations.cpp  example.cpp  grasp_filter.cpp  grasp_filter_utils.cpp  grasp_point_detector.cpp  grasp_ranker.cpp  grasp_sampler.cpp  normal_estimation_integral_images.cpp  openni_viewer_simple.cpp  plane_segmentation.cpp  ransac.cpp  ransac_normals.cpp  segmentation_visualizer.cpp  test_publisher.cpp  utils.cpp  viewer_spawner.cpp
src/visualization/: base_visualizer.cpp  detection_visualizer.cpp  segmentation_visualizer.cpp  visualization_thread.cpp
worlds/: table_with_objects.world  table_with_objects_closer.world  test.sdf
