<?xml version="1.0"?>
<package>
    <name>bachelors_final_project</name>
    <version>0.0.1</version>
    <description>The bachelors_final_project package</description>
    <maintainer email="ian.alonyon@gmail.com">Ian Yon</maintainer>
    <license>MIT</license>

    <!-- Url tags are optional, but mutiple are allowed, one per tag -->
    <!-- Optional attribute type can be: website, bugtracker, or repository -->
    <!-- Example: -->
    <!-- <url type="website">http://wiki.ros.org/my_pcl_tutorial</url> -->

    <author email="ian.alonyon@gmail.com">Ian Yon</author>

    <!-- The *_depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <!-- Examples: -->
    <!-- Use build_depend for packages you need at compile time: -->
    <!--   <build_depend>message_generation</build_depend> -->
    <!-- Use buildtool_depend for build tool packages: -->
    <!--   <buildtool_depend>catkin</buildtool_depend> -->
    <!-- Use run_depend for packages you need at runtime: -->
    <!--   <run_depend>message_runtime</run_depend> -->
    <!-- Use test_depend for packages you need only for testing: -->
    <!--   <test_depend>gtest</test_depend> -->
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>

    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>libpcl-all-dev</build_depend>

    <build_depend>moveit_ros_planning_interface</build_depend>
    <build_depend>pr2_controllers_msgs</build_depend>

    <run_depend>moveit_ros_planning_interface</run_depend>
    <run_depend>pr2_controllers_msgs</run_depend>

    <run_depend>libpcl-all</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>

    <run_depend>pcl_conversions</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
